--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Hello</p>
+    <div id="app">
+        <p>{{ title }}</p>
+        <button class="button-s" v-on:click="buttonClick">{{ buttonText }}</button>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
