--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
     <title>Document</title>
 </head>
 <body>
-    <div id="app">
-        <p>{{ title }}</p>
-        <button class="button-s" v-on:click="buttonClick">{{ buttonText }}</button>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
-    <script src="js/script.js"></script>
+    <div id="container"></div>
+    <!-- React --> 
+    <script src="https://unpkg.com/react@16/umd/react.production.min.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
+    <script type="text/babel" src="js/reactscript.js"></script>
 </body>
 </html>
