--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
 </head>
 <body>
+    <button class="button-info"></button>
     <div id="container"></div>
     <!-- React --> 
     <script src="https://unpkg.com/react@16/umd/react.production.min.js" crossorigin></script>
