--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <!-- React --> 
     <script src="https://unpkg.com/react@16/umd/react.production.min.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
-    <script type="text/babel" src="js/reactscript.js"></script>
+    <script src="js/reactscript.js"></script>
 </body>
 </html>
