--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
-    <title>Document</title>
+    <title>VKD</title>
 </head>
 <body>
-    <button class="button-info">Кнопка</button>
-    <div id="container"></div>
-    <script src="js/script.js"></script>
+    <div class="app"></div>
 </body>
 </html>
