--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,1 @@
-<!doctype html><html lang="ru"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta http-equiv="X-UA-Compatible" content="ie=edge"><title>VKD</title></head><body><div class="app"></div></body></html>
+<!doctype html><html lang="ru"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta http-equiv="X-UA-Compatible" content="ie=edge"><title>VKD</title></head><body><div class="app"></div><script src="production.d5faf790d5507373d8c6.js"></script></body></html>
